Use fish as default shell in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Use fish as default shell, when available
+set -g default-shell /usr/bin/fish
+set -g default-command /usr/bin/fish
+
 # Use C-s over C-b for prefix
 unbind C-b
 set -g prefix C-s
