--- a/.i3/config
+++ b/.i3/config
@@ -41,23 +41,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+H move left
 bindsym $mod+Shift+J move down
 bindsym $mod+Shift+K move up
 bindsym $mod+Shift+L move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # marks
 bindsym $mod+m exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
@@ -136,44 +124,17 @@ bindsym $mod+Shift+R restart
 bindsym $mod+Shift+E exit
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # They resize the border in the direction you pressed, e.g.
-        # when pressing left, the window is resized so that it has
-        # more space on its left
-
-bindsym h resize grow left 10 px or 10 ppt
-bindsym Shift+H resize shrink   left 10 px or 10 ppt
-
-bindsym j resize grow down 10 px or 10 ppt
-bindsym Shift+J resize shrink   down 10 px or 10 ppt
-
-bindsym k resize grow up 10 px or 10 ppt
-bindsym Shift+K resize shrink   up 10 px or 10 ppt
-
-bindsym l resize grow right 10 px or 10 ppt
-bindsym Shift+L resize shrink   right 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-bindsym Left resize shrink left 10 px or 10 ppt
-bindsym Shift+Left resize grow   left 10 px or 10 ppt
-
-bindsym Down resize shrink down 10 px or 10 ppt
-bindsym Shift+Down resize grow   down 10 px or 10 ppt
-
-bindsym Up resize shrink up 10 px or 10 ppt
-bindsym Shift+Up resize grow   up 10 px or 10 ppt
-
-bindsym Right resize shrink right 10 px or 10 ppt
-bindsym Shift+Right resize grow   right 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-bindsym Return mode "default"
-bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
+# These bindings resize the border in the direction you pressed, e.g.
+# when pressing left, the window is resized so that it has
+# more space on its left
+bindsym $mod+Left resize grow left 10 px or 10 ppt
+bindsym $mod+Shift+Left resize shrink   left 10 px or 10 ppt
+bindsym $mod+Down resize grow down 10 px or 10 ppt
+bindsym $mod+Shift+Down resize shrink   down 10 px or 10 ppt
+bindsym $mod+Up resize grow up 10 px or 10 ppt
+bindsym $mod+Shift+Up resize shrink   up 10 px or 10 ppt
+bindsym $mod+Right resize grow right 10 px or 10 ppt
+bindsym $mod+Shift+Right resize shrink   right 10 px or 10 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
