Add some git aliases, with completion support
The 'git cm' and 'git rb' git-aliases are for overriding with custom
behavior in projects, e.g. pausing and unpausing guard before and after
the command is run.

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,13 @@
 	email = tmandry@gmail.com
 	name = Tyler Mandry
 [push]
-	default = simple
+	default = upstream
 [color]
 	ui = true
 [core]
 	editor = vim
+[rerere]
+	enabled = true
+[alias]
+	co = checkout
+	rb = rebase
