Add alt+arrow for navigating tmux splits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,6 +49,12 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
+# Split navigation similar to vim
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+
 # Set terminal emulator window title to match current window
 set -g set-titles on
 set -g set-titles-string "#T"
