--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Use fish as default shell, when available
-set -g default-shell /usr/bin/fish
-set -g default-command /usr/bin/fish
+set -g default-shell /usr/local/bin/fish
+set -g default-command /usr/local/bin/fish
 
 # Use C-s over C-b for prefix
 unbind C-b
@@ -18,9 +18,9 @@ setw -g aggressive-resize on
 # Switch with the last window opened
 bind-key C-s last-window
 
-# Mouse mode for easy scrolling, switching between panes (hold down shift for normal click/drag/copy)
-setw -g mode-mouse on
-set -g mouse-select-pane on
+## Mouse mode for easy scrolling, switching between panes (hold down shift for normal click/drag/copy)
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
 
 # Scroll history
 set -g history-limit 30000
@@ -37,7 +37,7 @@ bind-key C-p previous-window
 # Window-splitting easier to remember
 unbind %
 bind \ split-window -h
-bind - split-window -v 
+bind - split-window -v
 
 # Split navigation similar to vim
 unbind-key j
@@ -66,10 +66,10 @@ set-option -g status-left ''
 set-option -g status-right-length 80
 set-option -g status-interval 3
 # Inactive windows in status bar
-set-window-option -g window-status-format '#[fg=blue,bold][ #[default]#I:#W#[fg=blue,bold] ]' 
+set-window-option -g window-status-format '#[fg=blue,bold][ #[default]#I:#W#[fg=blue,bold] ]'
 # Current or active window in status bar
 #set-option -g window-status-current-bg blue,bold
-set-window-option -g window-status-current-format '#[fg=blue,bold][ #[fg=white]#I:#W#[fg=blue,bold] ]' 
+set-window-option -g window-status-current-format '#[fg=blue,bold][ #[fg=white]#I:#W#[fg=blue,bold] ]'
 set -g status-right '#[fg=blue,bold][ #[default]#(whoami)@#H #[fg=blue,bold]]'
 #set -g status-right '#[fg=blue,bold][ #[default]#(mpc-current)#[fg=blue,bold] ] [ #[default]#(mail-report)#[fg=red]#(mail-report-unread)#[fg=blue,bold] ] [ #[default]#(battery)#[fg=blue,bold] ] [ #[default]%H:%M %b %d#[fg=blue,bold] ]'
 
