--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Use fish as default shell, when available
-set -g default-shell /usr/local/bin/fish
-set -g default-command /usr/local/bin/fish
+#set -g default-shell /usr/local/bin/fish
+#set -g default-command /usr/local/bin/fish
 
 # Use C-s over C-b for prefix
 unbind C-b
@@ -18,9 +18,10 @@ setw -g aggressive-resize on
 # Switch with the last window opened
 bind-key C-s last-window
 
-## Mouse mode for easy scrolling, switching between panes (hold down shift for normal click/drag/copy)
+# Mouse mode for easy scrolling, switching between panes (hold down shift for normal click/drag/copy)
 #setw -g mode-mouse on
 #set -g mouse-select-pane on
+set -g mouse on
 
 # Scroll history
 set -g history-limit 30000
