--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,8 @@
 	tool = vimdiff
 [difftool]
   prompt = true
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
