--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,8 +75,8 @@ set -g status-right '#[fg=blue,bold][ #[default]#(whoami)@#H #[fg=blue,bold]]'
 
 # make copying better
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -T vi-copy 'v' begin-selection
+#bind-key -T vi-copy 'y' copy-selection
 unbind p
 bind p paste-buffer
 
