tmux: synchronize panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,3 +87,6 @@ bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 set -g default-terminal "screen-256color"
+
+# Synchronize panes
+bind-key C-y setw synchronize-panes
