--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Use fish as default shell, when available
-set -g default-shell /usr/local/bin/fish
-set -g default-command /usr/local/bin/fish
+set -g default-shell /usr/bin/fish
+set -g default-command /usr/bin/fish
 
 # Use C-s over C-b for prefix
 unbind C-b
@@ -13,7 +13,9 @@ set -g base-index 1
 set -s escape-time 0
 
 # This really only matters for multiple clients to the same session
-setw -g aggressive-resize on
+#setw -g aggressive-resize on
+# Disabled for tmux
+setw -g aggressive-resize off
 
 # Switch with the last window opened
 bind-key C-s last-window
@@ -21,6 +23,7 @@ bind-key C-s last-window
 ## Mouse mode for easy scrolling, switching between panes (hold down shift for normal click/drag/copy)
 #setw -g mode-mouse on
 #set -g mouse-select-pane on
+setw -g mouse on
 
 # Scroll history
 set -g history-limit 30000
