--- a/.i3/config
+++ b/.i3/config
@@ -18,7 +18,10 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+Q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
+bindsym $alt+space exec "rofi -show run"
+bindsym $alt+b exec "rofi -show Workspace"
+bindsym $alt+w exec "rofi -show window"
 
 # change focus
 bindsym $mod+h focus left
@@ -111,14 +114,14 @@ bindsym $mod+Shift+E exit
 # These bindings resize the border in the direction you pressed, e.g.
 # when pressing left, the window is resized so that it has
 # more space on its left
-bindsym $mod+Left resize grow left 10 px or 10 ppt
-bindsym $mod+Shift+Left resize shrink   left 10 px or 10 ppt
-bindsym $mod+Down resize grow down 10 px or 10 ppt
-bindsym $mod+Shift+Down resize shrink   down 10 px or 10 ppt
-bindsym $mod+Up resize grow up 10 px or 10 ppt
-bindsym $mod+Shift+Up resize shrink   up 10 px or 10 ppt
-bindsym $mod+Right resize grow right 10 px or 10 ppt
-bindsym $mod+Shift+Right resize shrink   right 10 px or 10 ppt
+bindsym $mod+Left resize grow left 10 px or 5 ppt
+bindsym $mod+Shift+Left resize shrink   left 10 px or 5 ppt
+bindsym $mod+Down resize grow down 10 px or 5 ppt
+bindsym $mod+Shift+Down resize shrink   down 10 px or 5 ppt
+bindsym $mod+Up resize grow up 10 px or 5 ppt
+bindsym $mod+Shift+Up resize shrink   up 10 px or 5 ppt
+bindsym $mod+Right resize grow right 10 px or 5 ppt
+bindsym $mod+Shift+Right resize shrink   right 10 px or 5 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -138,6 +141,3 @@ for_window [class="Gnome-control-center"] floating enable
 # Screen layout shortcuts
 bindsym $mod+Shift+Control+exclam exec ~/.screenlayout/1.sh
 bindsym $mod+Shift+Control+at exec ~/.screenlayout/2-r.sh
-
-# Run autostart entries
-exec dex -ae i3
