--- a/.i3status.conf
+++ b/.i3status.conf
@@ -9,7 +9,7 @@ general {
 #order += "run_watch VPN"
 #order += "wireless wlan0"
 #order += "ethernet eth0"
-order += "battery 0"
+#order += "battery 0"
 #order += "cpu_temperature 0"
 #order += "load"
 order += "time"
