tmux: Status line top

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,7 @@ set -g set-titles on
 set -g set-titles-string "#T"
 
 # Status bar
+set-window-option -g status-position top
 set-option -g status-bg default
 set-option -g status-fg white
 set-option -g status-left ''
