Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g prefix C-s
 set -g base-index 1
 
 # Don't wait between C-t and the next command
-set -s escape-time 0
+set -sg escape-time 10
 
 # This really only matters for multiple clients to the same session
 #setw -g aggressive-resize on
@@ -26,7 +26,7 @@ bind-key C-s last-window
 setw -g mouse on
 
 # Scroll history
-set -g history-limit 30000
+set -g history-limit 50000
 
 # Lock after 15 minutes
 set-option -g lock-after-time 900
@@ -39,8 +39,9 @@ bind-key C-p previous-window
 
 # Window-splitting easier to remember
 unbind %
-bind \ split-window -h
-bind - split-window -v
+bind c new-window -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Split navigation similar to vim
 unbind-key j
@@ -84,13 +85,35 @@ set-window-option -g mode-keys vi
 unbind p
 bind p paste-buffer
 
-##CLIPBOARD selection integration
-##Requires prefix key before the command key
-#Copy tmux paste buffer to CLIPBOARD
-bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
-#Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
-bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
-set -g default-terminal "screen-256color"
+# Use incremental search
+bind-key -T copy-mode-vi / command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
+bind-key -T copy-mode-vi ? command-prompt -i -p "search up" "send -X search-backward-incremental \"%%%\""
+
+###CLIPBOARD selection integration
+###Requires prefix key before the command key
+##Copy tmux paste buffer to CLIPBOARD
+#bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
+##Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
+#bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+set -g default-terminal "tmux-256color"
+
+# Selection of settings from tmux-sensible
+set -g display-time 4000
+set -g status-keys emacs
+set -g focus-events on
 
 # Synchronize panes
 bind-key C-y setw synchronize-panes
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
+#unbind -T copy-mode MouseDragEnd1Pane
+#unbind -T vi-copy MouseDragEnd1Pane
+bind-key -T copy-mode-vi y send-keys -X copy-selection
