Add dbus address to tmux update-environment

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -105,6 +105,11 @@ set -g focus-events on
 # Synchronize panes
 bind-key C-y setw synchronize-panes
 
+# Update these environment variables on attach.
+# The env of running shells must still be updated with the values in `tmux show-environment`, e.g.:
+# export (tmux show-environment | grep DBUS_SESSION_BUS_ADDRESS)
+set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
