--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -120,10 +120,10 @@ misc {
 $mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, return, exec, kitty
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, F, exec, nautilus
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -134,6 +134,12 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# Resize with mainMod + arrow keys
+binde = $mainMod,right,resizeactive,10 0
+binde = $mainMod,left,resizeactive,-10 0
+binde = $mainMod,up,resizeactive,0 -10
+binde = $mainMod,down,resizeactive,0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
