More hyprland config

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -124,10 +124,13 @@ bind = $mainMod, return, exec, kitty
 bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, F, exec, nautilus
-bind = $mainMod, V, togglefloating,
+bind = $mainMod SHIFT, space, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, O, togglesplit, # dwindle
+bind = $mainMod, Minus, togglesplit, # dwindle
+bind = $mainMod, G, togglegroup, # dwindle
+bind = $mainMod, O, changegroupactive, f # dwindle
+bind = $mainMod, I, changegroupactive, b # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
