--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -101,12 +101,14 @@ master {
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = on
-    workspace_swipe_fingers = 4
+    #workspace_swipe_fingers = 4
+    #workspace_swipe_min_speed_to_force = 15
+    #workspace_swipe_cancel_ratio = 0.1
 }
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
 # Example windowrule v1
@@ -115,6 +117,10 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+bind=,XF86MonBrightnessDown,exec,light -U 10
+bind=,XF86MonBrightnessUp,exec,light -A 10
+bind=ALT SHIFT,XF86MonBrightnessDown,exec,light -U 5
+bind=ALT SHIFT,XF86MonBrightnessUp,exec,light -A 5
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
