more hyprland config

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -85,6 +85,7 @@ animations {
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
+    animation = specialWorkspace, 1, 3, default, slidevert
 }
 
 dwindle {
@@ -134,15 +135,21 @@ bind = $mainMod SHIFT, space, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Minus, togglesplit, # dwindle
-bind = $mainMod, G, togglegroup, # dwindle
-bind = $mainMod, O, changegroupactive, f # dwindle
-bind = $mainMod, I, changegroupactive, b # dwindle
+bind = $mainMod, G, togglegroup,
+bind = $mainMod, O, changegroupactive, f
+bind = $mainMod, I, changegroupactive, b
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# Move window with mainMod + SHIFT + arrow keys
+bind = $mainMod SHIFT, H, movewindoworgroup, l
+bind = $mainMod SHIFT, L, movewindoworgroup, r
+bind = $mainMod SHIFT, K, movewindoworgroup, u
+bind = $mainMod SHIFT, J, movewindoworgroup, d
 
 # Resize with mainMod + arrow keys
 binde = $mainMod,right,resizeactive,10 0
