--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ monitor=,preferred,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & dunst & lxqt-policykit-agent
+exec-once = waybar & dunst & lxqt-policykit-agent & darkman run
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
