--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,6 +1,6 @@
 # Use fish as default shell, when available
-set -g default-shell /usr/bin/fish
-set -g default-command /usr/bin/fish
+#set -g default-shell /usr/bin/fish
+#set -g default-command /usr/bin/fish
 
 # Use C-s over C-b for prefix
 unbind C-b
@@ -40,7 +40,7 @@ bind-key C-p previous-window
 # Window-splitting easier to remember
 unbind %
 bind c new-window -c "#{pane_current_path}"
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Split navigation similar to vim
@@ -111,12 +111,12 @@ bind-key C-y setw synchronize-panes
 set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY"
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+#run -b '~/.tmux/plugins/tpm/tpm'
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 #unbind -T copy-mode MouseDragEnd1Pane
